@@ -37,6 +37,16 @@
 
 -->
     <listitem>
+      <para>2012-05-24</para>
+      <itemizedlist>
+         <listitem>
+           <para>[bdubbs] - Minor tweaks to mountkernfs boot script.
+           Also fixes <ulink url="&lfs-ticket-root;3093">#3093</ulink>.</para>
+         </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2012-05-20</para>
       <itemizedlist>
          <listitem>
