@@ -1,3 +1,6 @@
+2012-05-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove mkdir from mountvirtfs because fs is read only
+
 2012-04-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
 
    * General update of network scripts ifup/ifdown and services
